# Katagrafeas

./: .gitignore  CMakeLists.txt  README.md  examples.cpp  main.cpp
examples/: ODR.cpp  SomeLibrary.hpp  main.cpp  old.cpp  test.cpp
include/: Chronometro.hpp  Katagrafeas.hpp  LockedKatagrafeas.hpp  ktz.hpp
